Ignore multiple exam found on external id (take first) and improve logging